# PhyCam_Eval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt
cpp/benchmark/: benchmark.cpp
cpp/bindings/: phycam_bindings.cpp
cpp/include/phycam/: fft2d.hpp  hdr.hpp  noise.hpp  optical.hpp  types.hpp
cpp/tests/: test_hdr.cpp  test_noise.cpp  test_optical.cpp
phycam_eval/: __init__.py
phycam_eval/benchmarks/: __init__.py  coco_subset.py
phycam_eval/degradations/: __init__.py  hdr.py  noise.py  optical.py
phycam_eval/eval/: __init__.py  coco.py  harness.py  metrics.py  mtf.py  plotting.py  sensitivity.py
report/: rerun_all.py
scripts/: build.sh  run_chained_sweep.py  run_defocus_sweep.py  run_detr_sweep.py  run_gamma_bootstrap.py  run_gaussian_blur_sweep.py  run_hdr_sweep.py  run_incoherent_defocus_sweep.py  run_noise_sweep.py  run_rolling_shutter_sweep.py  run_swap_order_experiment.py  run_threshold_free_sanity.py  run_tonecurve_validation.py
tests/: test_benchmarks.py  test_cpp_backend.py  test_eval_coco_helpers.py  test_hdr.py  test_metrics.py  test_mtf.py  test_noise.py  test_optical.py  test_pipeline.py  test_script_protocol.py
